Fix clickability, add hover states, fix slider spacing

--- a/app/components-react/windows/AdvancedAudio.m.less
+++ b/app/components-react/windows/AdvancedAudio.m.less
@@ -8,6 +8,10 @@
   position: absolute;
   top: 8px;
   left: 50px;
+
+  i:hover {
+    color: var(--icon-active);
+  }
 }
 
 .audio-source-name {
